# microstructure-sim

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
.github/workflows/: ci.yml
include/msim/: book.hpp  events.hpp  live_world.hpp  matching_engine.hpp  order.hpp  order_flow.hpp  rules.hpp  simulator.hpp  trade.hpp  types.hpp  world.hpp
include/msim/agents/: agent.hpp  market_event.hpp  market_view.hpp  noise_trader.hpp
src/: book.cpp  gateway_main.cpp  live_world.cpp  main.cpp  matching_engine.cpp  order_flow.cpp  rules.cpp  simulator.cpp  world.cpp
src/agents/: market_maker.cpp  noise_trader.cpp
tests/: test_agents_smoke.cpp  test_auction_uncross.cpp  test_cancel_modify.cpp  test_rules.cpp  test_simulator.cpp
web/: app.js  index.html
